--- a/9. 자연어 처리/1. 자연어 처리.md
+++ b/9. 자연어 처리/1. 자연어 처리.md
@@ -419,5 +419,598 @@
 
 
 
+### [6] 정수 인코딩
+
+- 컴퓨터는 텍스트보다는 숫자를 더 잘 처리 할 수 있기 때문에 정수에 매핑시키는 전처리 작업이 필요할 때가 있습니다.
+- 단어에 정수를 부여하는 방법 중 하나로 단어를 빈도수 순으로 정렬한 단어 집합(vocabulary)을 만들고, 빈도수가 높은 순서대로 차례로 낮은 숫자부터 정수를 부여하는 방법이 있습니다.
+
+#### (1) dictionary 사용하기
+
+````python
+from nltk.tokenize import sent_tokenize
+from nltk.tokenize import word_tokenize
+from nltk.corpus import stopwords
+
+raw_text = "A barber is a person. a barber is good person. \
+a barber is huge person. he Knew A Secret! The Secret He Kept is huge secret. \
+Huge secret. His barber kept his word. a barber kept his word. His barber kept his secret. \
+But keeping and keeping such a huge secret to himself was driving the barber crazy. \
+the barber went up a huge mountain."
+
+# 문장 토큰화
+sentences = sent_tokenize(raw_text)
+print(sentences)
+````
+
+````python
+# 결과
+['A barber is a person.', 'a barber is good person.', 'a barber is huge person.', 'he Knew A Secret!', 'The Secret He Kept is huge secret.', 'Huge secret.', 'His barber kept his word.', 'a barber kept his word.', 'His barber kept his secret.', 'But keeping and keeping such a huge secret to himself was driving the barber crazy.', 'the barber went up a huge mountain.']
+````
+
+````python
+vocab = {}
+preprocessed_sentences =[]
+stop_words = set(stopwords.words('english'))
+
+for sentence in sentences:
+    # 단어 토큰화
+    tokenized_sentence = word_tokenize(sentence)
+    result = []
+    for word in tokenized_sentence: 
+        word = word.lower() # 모든 단어를 소문자화하여 단어의 개수를 줄임
+        if word not in stop_words: # 단어 토큰화 된 결과에서 불용어를 제거
+            if len(word) > 2: # 단어 길이가 2이하인 경우에 대하여 추가로 단어 제거
+                result.append(word)
+                if word not in vocab:
+                    vocab[word] = 0
+                vocab[word] += 1
+                
+    preprocessed_sentences.append(result)
+print(preprocessed_sentences)
+print(vocab)
+````
+
+````python
+# 결과
+[['barber', 'person'], ['barber', 'good', 'person'], ['barber', 'huge', 'person'], ['knew', 'secret'], ['secret', 'kept', 'huge', 'secret'], ['huge', 'secret'], ['barber', 'kept', 'word'], ['barber', 'kept', 'word'], ['barber', 'kept', 'secret'], ['keeping', 'keeping', 'huge', 'secret', 'driving', 'barber', 'crazy'], ['barber', 'went', 'huge', 'mountain']]
+````
+
+````python
+print(vocab)
+````
+
+````python
+# 결과
+# 빈도수가 기록되어 있음
+{'barber': 8, 'person': 3, 'good': 1, 'huge': 5, 'knew': 1, 'secret': 6, 'kept': 4, 'word': 2, 'keeping': 2, 'driving': 1, 'crazy': 1, 'went': 1, 'mountain': 1}
+````
+
+````python
+print(vocab["barber"])
+````
+
+````python
+# 결과
+8
+````
+
+````python
+from collections import Counter
+
+a = [-1,-2,-3,-1,-2]
+A = Counter(a)
+print(A)
+
+print(sorted(A))
+print(sorted(A.items()))
+print(sorted(A.items(), key = lambda x: (-x[1], x[0])))
+print(sorted(A.items(), key = lambda x: (x[0], -x[1])))
+````
+
+````python
+# 결과
+Counter({-1: 2, -2: 2, -3: 1})
+[-3, -2, -1]
+[(-3, 1), (-2, 2), (-1, 2)]
+[(-2, 2), (-1, 2), (-3, 1)]
+[(-3, 1), (-2, 2), (-1, 2)]
+````
+
+````python
+# 빈도수가 높은대로 출력
+vocab_sorted = sorted(vocab.items(), key = lambda x:x[1], reverse = True)
+print(vocab_sorted)
+````
+
+````python
+# 결과
+[('barber', 8), ('secret', 6), ('huge', 5), ('kept', 4), ('person', 3), ('word', 2), ('keeping', 2), ('good', 1), ('knew', 1), ('driving', 1), ('crazy', 1), ('went', 1), ('mountain', 1)]
+````
+
+````python
+# 빈도수가 1인 단어는 제외
+word_to_index = {}
+i = 0
+for (word, frequency) in vocab_sorted:
+    if frequency > 1: # 빈도수가 1인 단어는 제외
+        i += 1
+        word_to_index[word] = i
+        
+print(word_to_index)
+````
+
+````python
+# 결과
+{'barber': 1, 'secret': 2, 'huge': 3, 'kept': 4, 'person': 5, 'word': 6, 'keeping': 7}
+````
+
+````python
+# 상위 다섯개만 사용
+vocab_size = 5
+words_frequency = [word for word, index in word_to_index.items() if index >= vocab_size + 1] # 인덱스가 5 초과인 단어 제거
+
+for w in words_frequency:
+    del word_to_index[w] # 해당 단어에 대한 인덱스 정보를 삭제
+
+print(word_to_index)
+````
+
+````python
+# 결과
+{'barber': 1, 'secret': 2, 'huge': 3, 'kept': 4, 'person': 5}
+````
+
+````python
+# Out-Of-Vocabulary(단어 집합에 없는 단어)
+# word_to_index에 'OOV'란 단어를 새롭게 추가
+word_to_index['OOV'] = len(word_to_index) + 1
+print(word_to_index)
+````
+
+````python
+# 결과
+{'barber': 1, 'secret': 2, 'huge': 3, 'kept': 4, 'person': 5, 'OOV': 6}
+````
+
+````python
+# 모든 단어들을 매핑되는 정수로 인코딩
+encoded_sentences = []
+for sentence in preprocessed_sentences:
+    encoded_sentence = []
+    for word in sentence:
+        try:
+            encoded_sentence.append(word_to_index[word])
+        except KeyError:
+            encoded_sentence.append(word_to_index['OOV'])
+    encoded_sentences.append(encoded_sentence)
+print(encoded_sentences)
+````
+
+```python
+# 결과
+[[1, 5], [1, 6, 5], [1, 3, 5], [6, 2], [2, 4, 3, 2], [3, 2], [1, 4, 6], [1, 4, 6], [1, 4, 2], [6, 6, 3, 2, 6, 1, 6], [1, 6, 3, 6]]
+```
 
 
+
+#### (2) Counter 사용하기
+
+- 파이썬의 Counter()의 입력으로 사용하면 중복을 제거하고 단어의 빈도수를 기록합니다.
+
+````python
+from collections import Counter
+
+print(preprocessed_sentences)
+````
+
+````python
+# 결과
+[['barber', 'person'], ['barber', 'good', 'person'], ['barber', 'huge', 'person'], ['knew', 'secret'], ['secret', 'kept', 'huge', 'secret'], ['huge', 'secret'], ['barber', 'kept', 'word'], ['barber', 'kept', 'word'], ['barber', 'kept', 'secret'], ['keeping', 'keeping', 'huge', 'secret', 'driving', 'barber', 'crazy'], ['barber', 'went', 'huge', 'mountain']]
+````
+
+````python
+all_words_list = sum(preprocessed_sentences, [])
+print(all_words_list)
+````
+
+````python
+# 결과
+['barber', 'person', 'barber', 'good', 'person', 'barber', 'huge', 'person', 'knew', 'secret', 'secret', 'kept', 'huge', 'secret', 'huge', 'secret', 'barber', 'kept', 'word', 'barber', 'kept', 'word', 'barber', 'kept', 'secret', 'keeping', 'keeping', 'huge', 'secret', 'driving', 'barber', 'crazy', 'barber', 'went', 'huge', 'mountain']
+````
+
+````python
+vocab = Counter(all_words_list)
+print(vocab)
+````
+
+````python
+# 결과
+Counter({'barber': 8, 'secret': 6, 'huge': 5, 'kept': 4, 'person': 3, 'word': 2, 'keeping': 2, 'good': 1, 'knew': 1, 'driving': 1, 'crazy': 1, 'went': 1, 'mountain': 1})
+````
+
+```python
+print(vocab["barber"])
+```
+
+````python
+# 결과
+8
+````
+
+````python
+vocab_size = 5
+vocab = vocab.most_common(vocab_size)
+
+vocab
+````
+
+````python
+# 결과
+[('barber', 8), ('secret', 6), ('huge', 5), ('kept', 4), ('person', 3)]
+````
+
+````python
+word_to_index = {}
+i = 0
+
+for (word, frqeuency) in vocab:
+    i += 1
+    word_to_index[word] = i
+    
+print(word_to_index)
+````
+
+````python
+# 결과
+{'barber': 1, 'secret': 2, 'huge': 3, 'kept': 4, 'person': 5}
+````
+
+
+
+#### (3) NLTK의 FreqDist 사용하기
+
+````python
+from nltk import FreqDist
+import numpy as np
+
+vocab = FreqDist(np.hstack(preprocessed_sentences))
+print(vocab["barber"])
+````
+
+````python
+# 결과
+8
+````
+
+````python
+vocab_size = 5
+vocab = vocab.most_common(vocab_size)
+
+vocab
+````
+
+```python
+# 결과
+[('barber', 8), ('secret', 6), ('huge', 5), ('kept', 4), ('person', 3)]
+```
+
+```python
+word_to_index = {word[0] : index + 1 for index, word in enumerate(vocab)}
+print(word_to_index)
+```
+
+```python
+# 결과
+{'barber': 1, 'secret': 2, 'huge': 3, 'kept': 4, 'person': 5}
+```
+
+```python
+test_input = ['a','b','c','d','e']
+for index, value in enumerate(test_input):
+    
+    print("valeu : {}, index: {}".format(value, index))
+```
+
+```python
+# 결과
+valeu : a, index: 0
+valeu : b, index: 1
+valeu : c, index: 2
+valeu : d, index: 3
+valeu : e, index: 4
+```
+
+
+
+#### (4) 케라스(Keras)의 텍스트 전처리
+
+```python
+from tensorflow.keras.preprocessing.text import Tokenizer
+
+tokenizer = Tokenizer()
+
+# fit_on_texts() 안에 코퍼스를 입력으로 하면 빈도수를 기준으로 단어 집합을 생성
+tokenizer.fit_on_texts(preprocessed_sentences)
+print(tokenizer.word_index)
+```
+
+```python
+# 결과
+{'barber': 1, 'secret': 2, 'huge': 3, 'kept': 4, 'person': 5, 'word': 6, 'keeping': 7, 'good': 8, 'knew': 9, 'driving': 10, 'crazy': 11, 'went': 12, 'mountain': 13}
+```
+
+```
+# 갯수 보기
+print(tokenizer.word_counts)
+```
+
+````python
+# 결과
+OrderedDict([('barber', 8), ('person', 3), ('good', 1), ('huge', 5), ('knew', 1), ('secret', 6), ('kept', 4), ('word', 2), ('keeping', 2), ('driving', 1), ('crazy', 1), ('went', 1), ('mountain', 1)])
+````
+
+````python
+print(tokenizer.texts_to_sequences(preprocessed_sentences))
+````
+
+````python
+# 결과
+[[1, 5], [1, 8, 5], [1, 3, 5], [9, 2], [2, 4, 3, 2], [3, 2], [1, 4, 6], [1, 4, 6], [1, 4, 2], [7, 7, 3, 2, 10, 1, 11], [1, 12, 3, 13]]
+````
+
+````python
+vocab_size = 5
+tokenizer = Tokenizer(num_words = vocab_size + 1) # 0은 패딩
+tokenizer.fit_on_texts(preprocessed_sentences)
+
+print(tokenizer.word_index)
+````
+
+````python
+# 결과
+{'barber': 1, 'secret': 2, 'huge': 3, 'kept': 4, 'person': 5, 'word': 6, 'keeping': 7, 'good': 8, 'knew': 9, 'driving': 10, 'crazy': 11, 'went': 12, 'mountain': 13}
+````
+
+````python
+print(tokenizer.word_counts)
+````
+
+````python
+# 결과
+OrderedDict([('barber', 8), ('person', 3), ('good', 1), ('huge', 5), ('knew', 1), ('secret', 6), ('kept', 4), ('word', 2), ('keeping', 2), ('driving', 1), ('crazy', 1), ('went', 1), ('mountain', 1)])
+````
+
+````python
+print(tokenizer.texts_to_sequences(preprocessed_sentences))
+````
+
+````python
+# 결과
+[[1, 5], [1, 5], [1, 3, 5], [2], [2, 4, 3, 2], [3, 2], [1, 4], [1, 4], [1, 4, 2], [3, 2, 1], [1, 3]]
+````
+
+````python
+tokenizer = Tokenizer()
+tokenizer.fit_on_texts(preprocessed_sentences)
+
+vocab = 5
+words_frequency = [word for word, index in tokenizer.word_index.items() if index >= vocab_size + 1]
+
+for word in words_frequency:
+    del tokenizer.word_index[word]
+    del tokenizer.word_counts[word]
+    
+print(tokenizer.word_index)
+print(tokenizer.word_counts)
+print(tokenizer.texts_to_sequences(preprocessed_sentences))
+````
+
+````python
+# 결과
+{'barber': 1, 'secret': 2, 'huge': 3, 'kept': 4, 'person': 5}
+OrderedDict([('barber', 8), ('person', 3), ('huge', 5), ('secret', 6), ('kept', 4)])
+[[1, 5], [1, 5], [1, 3, 5], [2], [2, 4, 3, 2], [3, 2], [1, 4], [1, 4], [1, 4, 2], [3, 2, 1], [1, 3]]
+````
+
+````python
+vocab_size = 5
+tokenizer = Tokenizer(num_words = vocab_size + 2, oov_token = 'OOV')
+tokenizer.fit_on_texts(preprocessed_sentences)
+print('단어 OOV의 인덱스: {}'.format(tokenizer.word_index['OOV']))
+````
+
+````python
+# 결과
+단어 OOV의 인덱스: 1
+````
+
+````python
+print(tokenizer.texts_to_sequences(preprocessed_sentences))
+````
+
+````python
+# 결과
+[[2, 6], [2, 1, 6], [2, 4, 6], [1, 3], [3, 5, 4, 3], [4, 3], [2, 5, 1], [2, 5, 1], [2, 5, 3], [1, 1, 4, 3, 1, 2, 1], [2, 1, 4, 1]]
+````
+
+
+
+### [7] 패딩
+
+- 각 문장의 길이가 다를 때, 여러 문장의 길이를 임의로 동일하게 맞춰주는 작업이 필요할 때가 있습니다. 
+
+#### (1)Numpy로 패딩하기
+
+````python
+import numpy as np
+from tensorflow.keras.preprocessing.text import Tokenizer
+
+tokenizer = Tokenizer()
+
+tokenizer.fit_on_texts(preprocessed_sentences)
+encoded = tokenizer.texts_to_sequences(preprocessed_sentences)
+print(encoded)
+````
+
+````python
+# 결과
+[[1, 5], [1, 8, 5], [1, 3, 5], [9, 2], [2, 4, 3, 2], [3, 2], [1, 4, 6], [1, 4, 6], [1, 4, 2], [7, 7, 3, 2, 10, 1, 11], [1, 12, 3, 13]]
+````
+
+````python
+max_len = max(len(item) for item in encoded)
+print(max_len)
+````
+
+````python
+# 결과
+7
+````
+
+````python
+for sentence in encoded:
+    while len(sentence) < max_len:
+        sentence.append(0)
+        
+padded_np = np.array(encoded)
+padded_np
+````
+
+````python
+# 결과
+array([[ 1,  5,  0,  0,  0,  0,  0],
+       [ 1,  8,  5,  0,  0,  0,  0],
+       [ 1,  3,  5,  0,  0,  0,  0],
+       [ 9,  2,  0,  0,  0,  0,  0],
+       [ 2,  4,  3,  2,  0,  0,  0],
+       [ 3,  2,  0,  0,  0,  0,  0],
+       [ 1,  4,  6,  0,  0,  0,  0],
+       [ 1,  4,  6,  0,  0,  0,  0],
+       [ 1,  4,  2,  0,  0,  0,  0],
+       [ 7,  7,  3,  2, 10,  1, 11],
+       [ 1, 12,  3, 13,  0,  0,  0]])
+````
+
+
+
+#### (2) 케라스 전처리 도구로 패딩하기
+
+````python
+from tensorflow.keras.preprocessing.sequence import pad_sequences
+
+encoded = tokenizer.texts_to_sequences(preprocessed_sentences)
+print(encoded)
+````
+
+````python
+# 결과
+[[1, 5], [1, 8, 5], [1, 3, 5], [9, 2], [2, 4, 3, 2], [3, 2], [1, 4, 6], [1, 4, 6], [1, 4, 2], [7, 7, 3, 2, 10, 1, 11], [1, 12, 3, 13]]
+````
+
+````python
+padded = pad_sequences(encoded)
+padded
+````
+
+````python
+# 결과
+array([[ 0,  0,  0,  0,  0,  1,  5],
+       [ 0,  0,  0,  0,  1,  8,  5],
+       [ 0,  0,  0,  0,  1,  3,  5],
+       [ 0,  0,  0,  0,  0,  9,  2],
+       [ 0,  0,  0,  2,  4,  3,  2],
+       [ 0,  0,  0,  0,  0,  3,  2],
+       [ 0,  0,  0,  0,  1,  4,  6],
+       [ 0,  0,  0,  0,  1,  4,  6],
+       [ 0,  0,  0,  0,  1,  4,  2],
+       [ 7,  7,  3,  2, 10,  1, 11],
+       [ 0,  0,  0,  1, 12,  3, 13]], dtype=int32)
+````
+
+````python
+padded = pad_sequences(encoded, padding = 'post')
+padded
+````
+
+````python
+# 결과
+array([[ 1,  5,  0,  0,  0,  0,  0],
+       [ 1,  8,  5,  0,  0,  0,  0],
+       [ 1,  3,  5,  0,  0,  0,  0],
+       [ 9,  2,  0,  0,  0,  0,  0],
+       [ 2,  4,  3,  2,  0,  0,  0],
+       [ 3,  2,  0,  0,  0,  0,  0],
+       [ 1,  4,  6,  0,  0,  0,  0],
+       [ 1,  4,  6,  0,  0,  0,  0],
+       [ 1,  4,  2,  0,  0,  0,  0],
+       [ 7,  7,  3,  2, 10,  1, 11],
+       [ 1, 12,  3, 13,  0,  0,  0]], dtype=int32)
+````
+
+````python
+(padded == padded_np).all()
+````
+
+````python
+# 결과
+True
+````
+
+````python
+padded = pad_sequences(encoded, padding = 'post', maxlen = 5) # maxlen만큼 길이를 자르기
+padded
+````
+
+````python
+# 결과
+array([[ 1,  5,  0,  0,  0],
+       [ 1,  8,  5,  0,  0],
+       [ 1,  3,  5,  0,  0],
+       [ 9,  2,  0,  0,  0],
+       [ 2,  4,  3,  2,  0],
+       [ 3,  2,  0,  0,  0],
+       [ 1,  4,  6,  0,  0],
+       [ 1,  4,  6,  0,  0],
+       [ 1,  4,  2,  0,  0],
+       [ 3,  2, 10,  1, 11],
+       [ 1, 12,  3, 13,  0]], dtype=int32)
+````
+
+````python
+last_value = len(tokenizer.word_index) + 1 # 0으로만 패딩하는 것은 아님. 14로도 가능!
+
+print(last_value)
+````
+
+````python
+# 결과
+14
+````
+
+````python
+padded = pad_sequences(encoded, padding = 'post', value = last_value)
+padded
+````
+
+````python
+# 결과
+array([[ 1,  5, 14, 14, 14, 14, 14],
+       [ 1,  8,  5, 14, 14, 14, 14],
+       [ 1,  3,  5, 14, 14, 14, 14],
+       [ 9,  2, 14, 14, 14, 14, 14],
+       [ 2,  4,  3,  2, 14, 14, 14],
+       [ 3,  2, 14, 14, 14, 14, 14],
+       [ 1,  4,  6, 14, 14, 14, 14],
+       [ 1,  4,  6, 14, 14, 14, 14],
+       [ 1,  4,  2, 14, 14, 14, 14],
+       [ 7,  7,  3,  2, 10,  1, 11],
+       [ 1, 12,  3, 13, 14, 14, 14]], dtype=int32)
+````
+
+
+
+### [8] 원-핫 인코딩
+
+- 원-핫 인코딩은 단어 집합의 크기를 벡터의 차원으로 하고, 표현하고 싶은 단어의 인덱스에 1의 값을 부여하고, 다른 인덱스에는 0을 부여하는 단어의 벡터 표현 방식입니다.
+- 원-핫 인코딩 방법
+  - 첫째, 정수 인코딩을 수행합니다.
