--- a/9. NLP/1. NLP.md
+++ b/9. NLP/1. NLP.md
@@ -417,6 +417,32 @@
 
 ### [4] 불용어
 
+````python
+from nltk.corpus import stopwords
+from nltk.tokenize import word_tokenize
+from konlpy.tag import Okt
+
+stop_words_list = stopwords.words('english')
+print('불용어 개수 :', len(stop_words_list))
+print('불용어 10개 출력 :', stop_words_list[:10])
+````
+
+````python
+example = "Family is not an important thing. It's everything."
+stop_words = set(stopwords.words('english'))
+
+word_tokens = word_tokenize(example)
+
+result = []
+
+for word in word_tokens:
+    if word not in stop_words:
+        result.append(word)
+        
+print('불용어 제거 전:', word_tokens)
+print('불용어 제거 후:', result)
+````
+
 
 
 ### [6] 정수 인코딩
@@ -1011,6 +1037,181 @@ array([[ 1,  5, 14, 14, 14, 14, 14],
 
 ### [8] 원-핫 인코딩
 
+#### (1) 원-핫 인코딩이란?
+
 - 원-핫 인코딩은 단어 집합의 크기를 벡터의 차원으로 하고, 표현하고 싶은 단어의 인덱스에 1의 값을 부여하고, 다른 인덱스에는 0을 부여하는 단어의 벡터 표현 방식입니다.
 - 원-핫 인코딩 방법
   - 첫째, 정수 인코딩을 수행합니다.
+  - 둘째, 표현하고 싶은 단어의 고유한 정수를 인덱스로 간주하고 해당 위치에 1을 부여하고, 다른 단어의 인덱스의 위치에는 0을 부여합니다.
+
+
+
+````python
+from konlpy.tag import Okt
+okt = Okt()
+token = okt.morphs("나는 자연어 처리를 배운다")
+print(token)
+````
+
+````python
+# 결과
+['나', '는', '자연어', '처리', '를', '배운다']
+````
+
+````python
+# 레이블 인코딩
+word2index = {}
+for voca in token:
+    if voca not in word2index.keys():
+        word2index[voca] = len(word2index)
+        
+print(word2index)
+````
+
+````python
+# 결과
+{'나': 0, '는': 1, '자연어': 2, '처리': 3, '를': 4, '배운다': 5}
+````
+
+````python
+def one_hot_encoding(word, word2index):
+    one_hot_vector = [0]*(len(word2index))
+    index = word2index[word]
+    one_hot_vector[index] = 1
+    return one_hot_vector
+one_hot_encoding("자연어", word2index)
+````
+
+````python
+# 결과
+[0, 0, 1, 0, 0, 0]
+````
+
+
+
+#### (2) 케라스를 이용한 원-핫 인코딩
+
+- 케라스는 원-핫 인코딩을 수행하는 유용한 도구 `to_categorical()` 를 지원합니다.
+
+````python
+from tensorflow.keras.preprocessing.text import Tokenizer
+from tensorflow.keras.utils import to_categorical
+
+text = "나랑 점심 먹으러 갈래 점심 메뉴는 햄버거 갈래 갈래 햄버거 최고야"
+
+tokenizer = Tokenizer()
+tokenizer.fit_on_texts([text])
+print(tokenizer.word_index)
+````
+
+````python
+# 결과
+{'갈래': 1, '점심': 2, '햄버거': 3, '나랑': 4, '먹으러': 5, '메뉴는': 6, '최고야': 7}
+````
+
+````python
+sub_text = "점심 먹으러 갈래 메뉴는 햄버거 최고야"
+encoded = tokenizer.texts_to_sequences([sub_text])[0]
+print(encoded)
+````
+
+````python
+# 결과
+[2, 5, 1, 6, 3, 7]
+````
+
+````python
+one_hot = to_categorical(encoded)
+print(one_hot)
+````
+
+````python
+# 결과
+[[0. 0. 1. 0. 0. 0. 0. 0.]
+ [0. 0. 0. 0. 0. 1. 0. 0.]
+ [0. 1. 0. 0. 0. 0. 0. 0.]
+ [0. 0. 0. 0. 0. 0. 1. 0.]
+ [0. 0. 0. 1. 0. 0. 0. 0.]
+ [0. 0. 0. 0. 0. 0. 0. 1.]]
+````
+
+
+
+#### (3) 원-핫 인코딩의 한계
+
+- 단어의 개수가 늘어날수록, 벡터를 저장하기 위해 필요한 공간이 계속 늘어난다는 단점이 있습니다.
+- 단어의 유사도를 표현하지 못한다는 단점이 있습니다. 이는 검색 시스템에서 문제 될 소지가 있습니다.
+- 이는 검색 시스템에서 문제 될 소지가 있습니다.
+
+- 해결 방안
+  - 카운트 기반의 벡터화 방법인 LSA(잠재 의미분석), HAL 등이 있습니다.
+  - 예측 기반으로 벡터화하는 NNLM, RNNLM,Word2Vec, FastText 등이 있습니다. 
+  - 카운트 기반과 예측 기반 두 가지 방법을 모두 사용하는 방법으로는 GloVe라는 방법이 존재합니다.
+
+
+
+### [9] 데이터의 분리
+
+````python
+X, y = zip(['a',1],['b',2],['c',3])
+print(X)
+print(y)
+````
+
+````python
+# 결과
+('a', 'b', 'c')
+(1, 2, 3)
+````
+
+````python
+sequences = [['a',1],['b',2],['c',3]]
+
+X,y = zip(*sequences)
+print(X)
+print(y)
+````
+
+````python
+# 결과
+('a', 'b', 'c')
+(1, 2, 3)
+````
+
+````python
+sent = '김철수는 극중 두 인격의 사나이 이광수 역을 맡았다. 철수는 한국 유일의 태권도 전승자를 가리는 결전의 날을 앞두고 10년간 함께 훈련한 사형인 유연재(김광수 분)를 찾으러 속세로 내려온 인물이다.'
+
+new_sent = sent.replace(" ",'')
+print(new_sent)
+````
+
+````python
+# 결과
+김철수는극중두인격의사나이이광수역을맡았다.철수는한국유일의태권도전승자를가리는결전의날을앞두고10년간함께훈련한사형인유연재(김광수분)를찾으러속세로내려온인물이다.
+````
+
+
+
+### [10] 한국어 전처리 패키지
+
+- PyKoSpacing
+
+````python
+pip install git+https://github.com/haven-jeon/PyKoSpacing.git
+````
+
+````python
+# 모듈 안깔림
+from pykospacing import Spacing
+spacing = Spacing()
+kospacing_Sent = spacing(new_sent)
+
+print(sent)
+print(kopacing_sent)
+````
+
+````python
+# 결과
+김철수는 극중 두 인격의 사나이 이광수 역을 맡았다. 철수는 한국 유일의 태권도 전승자를 가리는 결전의 날을 앞두고 10년간 함께 훈련한 사형인 유연재(김광수 분)를 찾으러 속세로 내려온 인물이다.
+김철수는 극중 두 인격의 사나이 이광수 역을 맡았다. 철수는 한국 유일의 태권도 전승자를 가리는 결전의 날을 앞두고 10년간 함께 훈련한 사형인 유연재(김광수 분)를 찾으러 속세로 내려온 인물이다.
+````
