--- a/9. NLP/3. Count based word Representation.md
+++ b/9. NLP/3. Count based word Representation.md
@@ -212,13 +212,203 @@ print(vect.vocabulary_)
 
 
 
-#### (3) TDM 실습
+#### (3) TDM(Term Documents Matirx)
+
+- 문서별로 단어의 빈도(term frequency)를 정리한 표
+- 장점
+  - 비정형 데이터인 텍스트를 표 형태로 정형화
+  - 정형 데이터의 다양한 통계 기법 적용 가능
+- 단점
+  - 처리가 단순하나 어순과 맥락을 무시하는 것이 단점
+- 희소 행렬
+- **실습**
+
+````python
+# 데이터 다운로드
+import wget
+
+wget.download('https://raw.githubusercontent.com/euphoris/datasets/master/imdb.xlsx')
+````
+
+````python
+# 데이터 열기
+import pandas as pd
+
+df = pd.read_excel('imdb.xlsx', index_col=0)
+df.head()
+````
+
+*# 결과*
+
+![스크린샷 2022-03-18 17.57.22](../../Desktop/스크린샷/스크린샷 2022-03-18 17.57.22.png)
+
+````python
+df.shape
+````
+
+````python
+# 결과
+(748, 2)
+````
+
+````python
+````
 
 
 
 
 
+#### (4) TDM 실습-단어 구름
 
+- wordcloud 설치
+
+````python
+# 아나콘다를 이용할 경우
+! conda install -y -c conda-forge wordcloud
+
+# 맥 또는 리눅스에서는 pip 명령어로도 설치
+pip install wordcloud
+````
+
+
+
+- 데이터 불러오기
+
+````python
+# 이전에 만들어 놓은 word_count를 불러온다
+import pandas as pd
+
+word_count = pd.read_csv('word_count.csv', index_col=0)
+word_count.head()
+````
+
+````python
+# 결과
+	단어	빈도
+0	10	29
+1	20	3
+2	90	6
+3	absolutely	9
+4	acted	3
+````
+
+- 단어 구름
+
+````python
+from wordcloud import WordCloud
+
+#font_path: 글꼴의 경로
+#max_words: 워드클라우드를 그릴 단어의 개수
+#background_color: 배경색 설정
+#width : 가로크기(픽셀 단위)
+#height: 세로크기(픽셀 단위)
+
+wc = WordCloud(background_color = 'white', max_words=100, width=400, height=300)
+
+word_count.set_index('단어')
+````
+
+````python
+# 결과
+	빈도
+단어	
+10	29
+20	3
+90	6
+absolutely	9
+acted	3
+...	...
+wrong	3
+year	5
+years	14
+yes	3
+young	4
+500 rows × 1 columns
+````
+
+````python
+word_count.set_index('단어')['빈도']
+````
+
+``
+
+````python
+# 결과
+단어
+10            29
+20             3
+90             6
+absolutely     9
+acted          3
+              ..
+wrong          3
+year           5
+years         14
+yes            3
+young          4
+Name: 빈도, Length: 500, dtype: int64
+````
+
+
+
+#### (5) 희소 행렬 압축 방식
+
+
+
+#### (6) TF-IDF 개념
+
+- TF : 단어의 등장 빈도
+- IDF : 특정 단어가 등장한 문서의 빈도의 역수
+- 문서빈도(df) : 각 단어가 등장한 (tf > 0) 문서의 수 (자주 나올수록 df 상승, idf는 하락)
+- 역문서빈도(idf) : 총 문서 수를 df로 나눈 값 (문서 간의 차이가 중요한 상황에서는 idf가 높은 단어가 좋은 단어)
+
+- 단어 빈도와 역문서빈도를 곱한 값
+- 상대적으로 적은 문서에 나오면서 특정 문서에 자주나오는 단어
+- TDM에 가중치를 주는 대표적인 방법
+- 다른 방법들도 가능, 분석 목적에 맞게 사용
+
+- **실습**
+
+````python
+import pandas as pd
+
+df = pd.read_excel('imdb.xlsx', index_col=0)
+df.head()
+````
+
+*# 결과*
+
+(이미지 붙여넣기)
+
+````python
+from sklearn.feature_extraction.text import TfidfVectorizer
+
+tfidf = TfidfVectorizer(max_features=500, stop_words='english')
+
+tdm = tfidf.fit_transform(df['review'])
+````
+
+````python
+word_count = pd.DataFrame({
+    '단어' : tfidf.get_feature_names(),
+    'tf-idf' : tdm.sum(axis=0).flat
+})
+
+word_count.sort_values('tf-idf', ascending=False)
+````
+
+````python
+````
+
+````python
+````
+
+````python
+````
+
+```python
+
+```
 
 
 
