--- a/9. NLP/3. Count based word Representation.md
+++ b/9. NLP/3. Count based word Representation.md
@@ -240,7 +240,7 @@ df.head()
 
 *# 결과*
 
-![스크린샷 2022-03-18 17.57.22](../../Desktop/스크린샷/스크린샷 2022-03-18 17.57.22.png)
+<img width="376" alt="스크린샷 2022-03-18 17 57 22" src="https://user-images.githubusercontent.com/96100946/158972020-6dbe2098-ba4b-4d78-89d9-260855c8fe98.png">
 
 ````python
 df.shape
