--- a/9. NLP/3. Count based word Representation.md
+++ b/9. NLP/3. Count based word Representation.md
@@ -252,7 +252,118 @@ df.shape
 ````
 
 ````python
+# TDM 만들기
+from sklearn.feature_extraction.text import CountVectorizer
+
+cv = CountVectorizer(max_features=500, stop_words='english') # 불용어 처리
+
+tdm = cv.fit_transform(df['review'])
+tdm
 ````
+
+````python
+# 결과
+<748x500 sparse matrix of type '<class 'numpy.int64'>'
+	with 3434 stored elements in Compressed Sparse Row format>
+````
+
+````python
+# 단어 목록
+cv.get_feature_names()[:10]
+````
+
+````python
+# 결과
+['10',
+ '20',
+ '90',
+ 'absolutely',
+ 'acted',
+ 'acting',
+ 'action',
+ 'actor',
+ 'actors',
+ 'actress']
+````
+
+````python
+len(cv.get_feature_names())
+````
+
+````python
+# 결과
+500
+````
+
+````python
+# 단어별 총 빈도
+tdm.sum(axis=0) 
+````
+
+````python
+# 결과
+matrix([[ 29,   3,   6,   9,   3,  43,   7,  10,  19,   3,   3,  10,   3,
+           4,   3,   4,   9,   3,   3,   3,   6,   3,   4,   3,  13,   4,
+ 																			... ... ...
+          12,  21,   3,   3,  12,   5,   3,  43,   5,   4,   3,   5,   4,
+          15,   3,   4,   3,   4,   9,   4,   4,   3,   8,   3,   4,   3,
+           9,   4,   4,   6,   8,   4,   4,   3,  13,   4,   6,   3,   7,
+          14,   7,  17,   3,   9,  22,  23,   8,   3,   3,   3,   3,   5,
+          18,   3,   5,  20,   5,   6,  11,  11,  13,   3,   3,   3,  13,
+           7,   3,   5,  14,   3,   4]])
+````
+
+````python
+tdm.sum(axis=1)  # 문서별 총 단어 수
+````
+
+````python
+# 결과
+matrix([[  5],
+        [  5],
+        [ 12],
+        [  3],
+        [  6],
+        [  7],
+        [  2],
+        [  7],
+        [  2],
+        [  2],
+... ... 
+        [  1],
+        [  4],
+        [  6],
+        [  1],
+        [  1],
+        [  5]])
+````
+
+````python
+word_count = pd.DataFrame({
+    '단어': cv.get_feature_names(),
+    '빈도': tdm.sum(axis=0).flat # 펼쳐서 
+})
+````
+
+````python
+word_count
+````
+
+<img width="145" alt="스크린샷 2022-03-18 18 18 33" src="https://user-images.githubusercontent.com/96100946/158975433-9de0a65f-d0e6-4b10-8088-80f85bf401ec.png">
+
+````python
+````
+
+````python
+````
+
+
+
+
+
+
+
+
 
 
 
