--- a/9. NLP/5. Embedding.md
+++ b/9. NLP/5. Embedding.md
@@ -2,3 +2,593 @@
 
 
 
+## gensim을 이용한 FastText
+
+### 데이터 다운로드
+
+````python
+import pandas as pd
+import requests
+
+# 네이버 영화 리뷰 데이터
+res = requests.get('https://github.com/e9t/nsmc/raw/master/ratings_train.txt')
+
+with open ('ratings_train.txt','wb') as f:
+    f.write(res.content)
+
+# 데이터 프레임 변환
+nsmc = pd.read_csv('ratings_train.txt', sep='\t')
+
+# 데이터 다운로드 방법2
+# nsmc = pd.read_csv('https://github.com/e9t/nsmc/raw/master/ratings_train.txt.', sep='\t')
+````
+
+````python
+nsmc
+````
+
+<img width="552" alt="스크린샷 2022-03-25 19 17 43" src="https://user-images.githubusercontent.com/96100946/160102412-7e076ba2-ec61-4618-96a1-c14493950399.png">
+
+
+
+### 전처리
+
+````python
+import re
+
+# 모든 한글 불러와서 공백을 기준으로 나누기
+def find_hangul(text):
+    return re.findall(r'[ㄱ-ㅎ가-힣]+',text) # 모든 ㄱ-ㅎ가-힣까지 찾기
+  
+  nsmc['document']
+````
+
+````python
+# 결과
+0                                       아 더빙.. 진짜 짜증나네요 목소리
+1                         흠...포스터보고 초딩영화줄....오버연기조차 가볍지 않구나
+2                                         너무재밓었다그래서보는것을추천한다
+3                             교도소 이야기구먼 ..솔직히 재미는 없다..평점 조정
+4         사이몬페그의 익살스런 연기가 돋보였던 영화!스파이더맨에서 늙어보이기만 했던 커스틴 ...
+                                ...                        
+149995                                  인간이 문제지.. 소는 뭔죄인가..
+149996                                        평점이 너무 낮아서...
+149997                      이게 뭐요? 한국인은 거들먹거리고 필리핀 혼혈은 착하다?
+149998                          청춘 영화의 최고봉.방황과 우울했던 날들의 자화상
+149999                             한국 영화 최초로 수간하는 내용이 담긴 영화
+Name: document, Length: 150000, dtype: object
+````
+
+````python
+nsmc.iloc[0,1]
+````
+
+````python
+# 결과
+'아 더빙.. 진짜 짜증나네요 목소리'
+````
+
+````python
+nsmc.loc[0,'document']
+````
+
+````python
+# 결과
+'아 더빙.. 진짜 짜증나네요 목소리'
+````
+
+````python
+# 함수 적용 확인
+find_hangul(nsmc.loc[0,'document'])
+````
+
+````python
+# 결과
+['아', '더빙', '진짜', '짜증나네요', '목소리']
+````
+
+````python
+nsmc['document'].notnull() #null 값이 있니? null 값이 있으면 에러날 수 있음
+````
+
+````python
+# 결과
+0         True
+1         True
+2         True
+3         True
+4         True
+          ... 
+149995    True
+149996    True
+149997    True
+149998    True
+149999    True
+Name: document, Length: 150000, dtype: bool
+````
+
+````python
+nsmc[nsmc['document'].notnull()] #null인 값이 빼고 데이터 프레임 생성
+````
+
+<img width="544" alt="스크린샷 2022-03-25 19 24 49" src="https://user-images.githubusercontent.com/96100946/160103265-441f6832-ee09-417c-8e1d-3727a45408f4.png">
+
+`````python
+# null값을 뺀 모든 document 데이터에 map 함수 이용하여 공백을 기준으로 나누기
+data = nsmc[nsmc['document'].notnull()]['document'].map(find_hangul) 
+data
+`````
+
+````python
+# 결과
+0                                   [아, 더빙, 진짜, 짜증나네요, 목소리]
+1                       [흠, 포스터보고, 초딩영화줄, 오버연기조차, 가볍지, 않구나]
+2                                       [너무재밓었다그래서보는것을추천한다]
+3                        [교도소, 이야기구먼, 솔직히, 재미는, 없다, 평점, 조정]
+4         [사이몬페그의, 익살스런, 연기가, 돋보였던, 영화, 스파이더맨에서, 늙어보이기만,...
+                                ...                        
+149995                                 [인간이, 문제지, 소는, 뭔죄인가]
+149996                                       [평점이, 너무, 낮아서]
+149997                [이게, 뭐요, 한국인은, 거들먹거리고, 필리핀, 혼혈은, 착하다]
+149998                  [청춘, 영화의, 최고봉, 방황과, 우울했던, 날들의, 자화상]
+149999                     [한국, 영화, 최초로, 수간하는, 내용이, 담긴, 영화]
+Name: document, Length: 149995, dtype: object
+````
+
+````python
+data[0]
+````
+
+````python
+# 결과
+['아', '더빙', '진짜', '짜증나네요', '목소리']
+````
+
+````python
+data[1]
+````
+
+````python
+# 결과
+['흠', '포스터보고', '초딩영화줄', '오버연기조차', '가볍지', '않구나']
+````
+
+````python
+# 한글만 들어있는 데이터를 공백을 넣어서 다시 데이터 만들기
+def only_hangul(text):
+    return ' '.join(find_hangul(text))
+````
+
+````python
+only_hangul(nsmc.loc[0,'document'])
+````
+
+````python
+# 결과
+'아 더빙 진짜 짜증나네요 목소리'
+````
+
+````python
+data2 = nsmc[nsmc['document'].notnull()]['document'].map(only_hangul)
+data2
+````
+
+````python
+# 결과
+0                                         아 더빙 진짜 짜증나네요 목소리
+1                              흠 포스터보고 초딩영화줄 오버연기조차 가볍지 않구나
+2                                         너무재밓었다그래서보는것을추천한다
+3                                교도소 이야기구먼 솔직히 재미는 없다 평점 조정
+4         사이몬페그의 익살스런 연기가 돋보였던 영화 스파이더맨에서 늙어보이기만 했던 커스틴 ...
+                                ...                        
+149995                                      인간이 문제지 소는 뭔죄인가
+149996                                           평점이 너무 낮아서
+149997                        이게 뭐요 한국인은 거들먹거리고 필리핀 혼혈은 착하다
+149998                          청춘 영화의 최고봉 방황과 우울했던 날들의 자화상
+149999                             한국 영화 최초로 수간하는 내용이 담긴 영화
+Name: document, Length: 149995, dtype: object
+````
+
+```python
+data2[0]
+```
+
+```python
+# 결과
+'아 더빙 진짜 짜증나네요 목소리'
+```
+
+````python
+# 저장
+with open ('nsmc.txt','w', encoding='utf-8') as f:
+    f.write('/n'.join(data2))    
+````
+
+
+
+### FastText 모형 학습
+
+````python
+from gensim.models.word2vec import Word2Vec
+from gensim.models.fasttext import FastText
+
+# 모델 기본 설정 해주기
+
+model = FastText(vector_size=16) # sg=0(기본값)) 이면 cbow(주변 -> 가운데 단어 예측), sg=1 이면 skip-gram(가운데 -> 주변 단어 예측)
+# 임베딩 크기를 지정할 수 있음, 단어 하나마다 16개의 임베딩 사이즈로 학습을 시킬 것임
+
+# alpha = 0.025(기본값) ->학습률 지정
+# min_alpha -> 학습률을 낮춰주는 역할
+# wimdow = 5(기본값) -> 좌우 몇개 단어 맥락으로 학습을 할지 결정(2*window)
+# min_count = 5(기본값) -> 최소 몇번 나와야 학습을 함
+# vector_size = 100(기본값) 
+````
+
+````python
+model.build_vocab(corpus_iterable=data)
+# model.build_vocab(corpus_file='nsmc.txt') # 파일을 직접 쓰는 방법
+````
+
+````python
+# 학습
+model.train(
+    corpus_iterable=data, # gensim 4.0 이상의 경우 sentences=data 대신 corpus_iterable=data
+    epochs=5,
+    total_examples=model.corpus_count,
+    total_words=model.corpus_total_words
+)
+````
+
+````python
+# 결과
+(3999735, 5829395)
+````
+
+
+
+### 저장과 불러오기
+
+````python
+# 모델 저장
+model.save('nsmc.fasttext')
+````
+
+````python
+# 모델 불러오기
+# model = FastText.load('nsmc.fasttext')
+````
+
+
+
+## FastText 임베딩
+
+### 모형 불러오기
+
+````python
+from gensim.models.fasttext import FastText
+
+model = FastText.load('nsmc.fasttext')
+````
+
+
+
+### 단어 임베딩
+
+````python
+# 학습된 단어들
+model.wv.key_to_index
+````
+
+````python
+# 결과
+{'영화': 0,
+ '너무': 1,
+ '정말': 2,
+ '진짜': 3,
+ '이': 4,
+ '그냥': 5,
+...
+ '않지만': 995,
+ '생애': 996,
+ '싶네요': 997,
+ '여배우': 998,
+ '옛날에': 999,
+ ...}
+````
+
+````python
+'히어로' in model.wv.key_to_index
+````
+
+````python
+# 결과
+True
+````
+
+````python
+# 임베딩 값 확인
+model.wv['히어로']
+````
+
+````python
+# 결과
+array([-0.44556174,  0.6396182 ,  0.39184517,  0.4634792 ,  0.83699495,
+        0.16481015, -0.56341296, -0.51904905,  0.20349519,  0.0227381 ,
+        0.28163013, -0.9121555 ,  0.23006463, -0.37539473, -0.01843921,
+        0.41936108], dtype=float32)
+````
+
+````python
+len(model.wv['히어로'])
+````
+
+````python
+# 결과
+16
+````
+
+````python
+'슈퍼히어로' in model.wv.key_to_index
+````
+
+````python
+# 결과
+False
+````
+
+````python
+# 학습이 안되어 있어도 임베딩 값 확인 가능
+model.wv['슈퍼히어로']
+````
+
+````python
+# 결과
+array([-0.18990824,  0.26687676,  0.20151417,  0.19575636,  0.33958167,
+        0.08931514, -0.20352474, -0.23111035,  0.12890618, -0.0028352 ,
+        0.14955638, -0.33355865,  0.04841024, -0.14620402,  0.01415789,
+        0.1987989 ], dtype=float32)
+````
+
+
+
+### 유사도
+
+````python
+model.wv.similarity('슈퍼히어로', '히어로')
+````
+
+````python
+# 결과
+0.9904703
+````
+
+````python
+# 완전히 같으면 1이 나옴
+model.wv.similarity('히어로', '히어로')
+````
+
+``
+
+````python
+# 결과
+0.99999994
+````
+
+````python
+# 유사도 떨어짐
+model.wv.similarity('히어로', '평론가')
+````
+
+````python
+# 결과
+0.71040547
+````
+
+````python
+# 비슷한 단어 찾기
+model.wv.most_similar('평론가')
+````
+
+````python
+# 결과
+[('점이상은', 0.9908743500709534),
+ ('점이라', 0.989971935749054),
+ ('점이야', 0.989532470703125),
+ ('점대가', 0.9891818165779114),
+ ('평론가들', 0.9890543222427368),
+ ('점대지', 0.9889349341392517),
+ ('점이라니', 0.9885795712471008),
+ ('점이냐', 0.9882772564888),
+ ('평론', 0.9877945184707642),
+ ('점이나', 0.9877570271492004)]
+````
+
+
+
+## FastText를 이용한 감성분석
+
+### 준비
+
+````python
+from gensim.models.fasttext import FastText
+
+ft = FastText.load('nsmc.fasttext')
+````
+
+````python
+import pandas as pd
+nsmc = pd.read_csv('ratings_train.txt', sep='\t')
+````
+
+
+
+### 전처리
+
+````python
+df = nsmc[nsmc['document'].notnull()]
+````
+
+````python
+from sklearn.model_selection import train_test_split
+
+doc_train, doc_test, y_train, y_test = train_test_split(df['document'],df['label'], test_size=0.2, random_state=42)
+````
+
+```python
+import re
+
+def find_hangul(text):
+    return re.findall(r'[ㄱ-ㅎ가-힣]+',text)
+```
+
+```python
+import numpy as np
+
+x_train = np.zeros((1000, 16))
+x_train
+```
+
+```python
+# 결과
+array([[0., 0., 0., ..., 0., 0., 0.],
+       [0., 0., 0., ..., 0., 0., 0.],
+       [0., 0., 0., ..., 0., 0., 0.],
+       ...,
+       [0., 0., 0., ..., 0., 0., 0.],
+       [0., 0., 0., ..., 0., 0., 0.],
+       [0., 0., 0., ..., 0., 0., 0.]])
+```
+
+```python
+doc_train.shape
+```
+
+````python
+# 결과
+(119996,)
+````
+
+```python
+doc_train
+```
+
+````python
+# 결과
+31989            아 꿀잼ㅋ 친구랑 봤는데 너무 웃겼음 그리구 김우빈 잘생겼다..
+63462                    개건의 졸작 스릴러? 스릴러라고 하게에도 민망하군
+17518               장하나 한윤찬 제발 이어주세요 말도안되게 왜 설도현과ㅜㅜㅜ
+123410                                   애로영화계의 개OOO
+104181                               내용이나 그래픽자체가 허접함
+                             ...                    
+119882      꿈을 꾸는사람 꿈을 이룬사람 돌멩이도 꿈은 있잖아! 꿈과희망을 주는 영화
+103696                                레니 할린.. 이게 뭐니?
+131936                                    시라노; 연애조작단
+146872                                    집중이 쉽지 않다.
+121961    엔딩 장면이 좋고 소소한 일상과 고민과 연애가 공감을 주어 재밌게 보았어여~
+Name: document, Length: 119996, dtype: object
+````
+
+````python
+for i, doc in enumerate(doc_train.iloc[:1000]):
+    vs = [ft.wv[word] for word in find_hangul(doc)]
+    #print(doc, vs[0], len(vs), type(vs))
+    if vs:
+        x_train[i,] = np.mean(vs, axis=0)
+print(x_train)
+````
+
+````python
+# 결과
+[[-0.93681359  0.57779378  0.05826368 ... -0.06125826  0.74789554
+   0.84246349]
+ [-0.14516871  1.11866343  0.52217901 ... -0.66767186 -0.36944151
+   0.72939205]
+ [-0.53022718  0.87897962  1.1447618  ... -0.21094088 -0.19332765
+   0.88181609]
+ ...
+ [-0.62553704  0.94899327  0.26505861 ... -0.48823795 -0.43388829
+   0.57325917]
+ [-0.51112145  0.84058148 -0.18317862 ... -0.182436   -0.27658951
+   0.86090177]
+ [-0.27348241  0.24222665  0.0975849  ... -0.21762742  0.00791572
+   0.13891543]]
+````
+
+````python
+for i, doc in enumerate(doc_train.iloc[:1]):
+    for word in find_hangul(doc):
+        print(word)
+        vs = ft.wv[word]
+        print(vs)
+````
+
+````python
+# 결과
+아
+[-1.0062572   3.04051     1.9552939  -0.511915    3.7326949   2.646548
+ -2.1907728  -2.7109077   2.5263605  -3.9821837   2.0572658   1.1099418
+ -6.3263173   0.01749161  3.4947624   3.570272  ]
+꿀잼ㅋ
+[-0.20798074  0.21302892  0.10354929  0.15912147  0.6423255   0.14994046
+ -0.29064962 -0.318221    0.34653038 -0.03072548  0.20527557 -0.22636294
+ -0.23194587  0.00269958  0.20309748  0.2302026 ]
+친구랑
+[-1.5084366   0.8543077   0.9410595   0.53284115  1.6518663   0.9495854
+ -0.9819191  -0.6062633   1.1868908   0.03428438  0.6525722  -1.4801377
+ -0.3644087   0.23273642  0.34470063  0.6738399 ]
+봤는데
+[-5.2907720e+00 -3.8801876e-01 -2.9871580e-01  9.9695861e-01
+  3.3548186e+00  1.8513031e+00  5.5356926e-01 -7.0771569e-01
+  5.1353889e+00 -3.9260727e-03  5.5282909e-01 -3.6347228e-01
+ -5.4007940e+00  6.5568924e-02  1.1952637e+00  2.1541612e+00]
+너무
+[ 0.72426534  0.23408043 -2.5592601   3.4065642   1.286808    1.9450147
+ -0.24801    -3.8719184   3.113274    4.229127    1.8740577  -1.4535108
+ -2.7157469  -0.0542215   1.283298   -0.1878557 ]
+웃겼음
+[-0.2562899   0.3397161   0.12029065  0.33211556  0.9216483   0.00327225
+ -0.40325347 -0.5133251   0.3717672   0.07757377  0.33724204 -0.52362895
+ -0.20012735 -0.01717626  0.10580049  0.36139312]
+그리구
+[-0.3911019   0.29189888 -0.06824212  0.33074346  0.30482048  0.21367088
+ -0.47383237 -0.6010359   0.10579062  0.1802118   0.44408724 -0.58344215
+  0.17471865 -0.46072882  0.00162159  0.24163413]
+김우빈
+[-0.1201695   0.06563181  0.10657018  0.15497673  0.21992767  0.10265602
+ -0.12179454 -0.1595316   0.09120154  0.03069106  0.15658784 -0.17716084
+ -0.04824622 -0.03002499 -0.01558933  0.11089726]
+잘생겼다
+[-0.37457913  0.548989    0.22382766  0.4348448   1.0764571   0.14891212
+ -0.5198658  -0.7816775   0.40434977  0.00579746  0.49029124 -0.78908134
+ -0.10070372 -0.30766928  0.11810455  0.42762652]
+````
+
+
+
+### 모형 학습
+
+```python
+import tensorflow as tf
+
+model = tf.keras.Sequential([
+    tf.keras.layers.Dense(16, activation = 'relu'),
+    tf.keras.layers.Dense(1, activation = 'sigmoid')
+])
+```
+
+````python
+model.compile(loss='binary_crosstropy', optimizer ='adam', metrics=['accuracy'])
+````
+
+```python
+model.fit(x_train, y_train.values[:1000], epochs=1)
+```
+
+````python
+model.summary()
+````
+
+
+
+
+
